--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               class="inputfile"
               accept="image/x-png,image/gif,image/jpeg"
             />
-            <label for="file" class=""><span>Upload an image</span></label>
+            <label for="file" class=""><span id="btn">Training Model...</span></label>
           </div>
         </div>
         <div class="col-sm-6">
@@ -54,6 +54,8 @@
                 </li>
               </ul>
             </div>
+          </div>
+          
           </div>
         </div>
       </div>
