--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
       rel="stylesheet"
     />
     <!-- Load the latest version of TensorFlow.js -->
-    <!-- <script src="./assets/tensorflow.min.js.map"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-    <!-- <script src="./assets/mobilenet.min.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet"></script>
-    <!-- <script src="./assets/hnn-classifier.min.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/knn-classifier"></script>
+    <script src="./assets/tensorflow.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script> -->
+    <script src="./assets/mobilenet.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet"></script> -->
+    <script src="./assets/hnn-classifier.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/knn-classifier"></script> -->
   </head>
   <body style="background-image: url('./assets/bg.jpg');">
     <div class="container">
