--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Visualize</title>
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./assets/bootstrap.min.css" />
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="shortcut icon" href="./img/assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap"
       rel="stylesheet"
     />
     <!-- Load the latest version of TensorFlow.js -->
-    <script src="./assets/tensorflow.min.js"></script>
+    <script src="./assets/js/tensorflow.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script> -->
-    <script src="./assets/mobilenet.min.js"></script>
+    <script src="./assets/js/mobilenet.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet"></script> -->
-    <script src="./assets/hnn-classifier.min.js"></script>
+    <script src="./assets/js/hnn-classifier.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/knn-classifier"></script> -->
   </head>
-  <body style="background-image: url('./assets/bg.jpg');">
+  <body style="background-image: url('./assets/img/bg.jpg');">
     <div class="container">
       <div class="row">
         <div class="col-sm-6 full-height">
@@ -35,6 +35,7 @@
               accept="image/x-png,image/gif,image/jpeg"
             />
             <label for="file" class=""><span id="btn">Training Model...</span></label>
+            <a class="link-btn" href="webcam.html">Real Time Detector</a>
           </div>
         </div>
         <div class="col-sm-6">
@@ -42,7 +43,7 @@
             <img
               id="img"
               class="card-img-top"
-              src="./assets/car.jpg"
+              src="./assets/img/car.jpg"
               alt="Card image cap"
             />
             <div class="card-body">
@@ -67,6 +68,6 @@
     <!-- Load index.js after the content of the page -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
-    <script src="./assets/index.js"></script>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
