objects detector all done

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               accept="image/x-png,image/gif,image/jpeg"
             />
             <label for="file" class=""><span id="btn">Training Model...</span></label>
-            <a class="link-btn" href="webcam.html">Real Time Detector</a>
+            <!-- <a class="link-btn" href="webcam.html">Real Time Detector</a> -->
           </div>
         </div>
         <div class="col-sm-6">
